# osu-ai

./: .gitignore  CITATION.cff  README.md  accu.py  attempted_resnet_impl  capture.py  constants.py  dataset.py  fix_img.py  it_1.txt  it_2.txt  main.py  models.py  play.py  pyproject.toml  rep.py  replay.py  requirements.txt  test.py  test_a.py  train.py  train_test.py  utils.py  windows.py
agent/: engine.py  interface.py  osu_player.py
ai/: __init__.py  capture.py  constants.py  convert.py  converter.py  dataset.py  dataset_old.py  enums.py  eval.py  models.py  play.py  play_buggy.py  play_lstm  play_old.py  train.py  utils.py
ai/replay/: __init__.py  converter.py  utils.py  video_reader.py
assets/: danser-settings.json
experiments/: rt.py  s_test.py  socket_test.py  test_1.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  torch_t.py  vel_test.py
rl/: agent.py  dqn.py  env.py  memory.py
